# serializer version: 1
# name: test_basic
  dict({
    'edges': list([
      dict({
        'attributes': dict({
        }),
        'directed': False,
        'source': 'A1',
        'target': 'D',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
        }),
        'directed': False,
        'source': 'B1',
        'target': 'D',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
        }),
        'directed': False,
        'source': 'C',
        'target': 'D',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
        }),
        'directed': True,
        'source': 'A',
        'target': 'B',
        'type': 'edge',
      }),
    ]),
    'format': 'gmlang.graph',
    'nodes': dict({
      'A': dict({
        'attributes': dict({
        }),
      }),
      'A1': dict({
        'attributes': dict({
        }),
      }),
      'B': dict({
        'attributes': dict({
        }),
      }),
      'B1': dict({
        'attributes': dict({
        }),
      }),
      'C': dict({
        'attributes': dict({
        }),
      }),
      'D': dict({
        'attributes': dict({
        }),
      }),
    }),
    'type': 'graph',
    'version': 1,
  })
# ---
# name: test_connection_types
  dict({
    'edges': list([
      dict({
        'attributes': dict({
        }),
        'directed': False,
        'source': 'X',
        'target': 'Y',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
        }),
        'directed': True,
        'source': 'M',
        'target': 'P',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
        }),
        'directed': True,
        'source': 'N',
        'target': 'P',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
        }),
        'directed': True,
        'source': 'O',
        'target': 'P',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
        }),
        'directed': True,
        'source': 'X',
        'target': 'Y',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
        }),
        'directed': True,
        'source': 'Y',
        'target': 'X',
        'type': 'edge',
      }),
    ]),
    'format': 'gmlang.graph',
    'nodes': dict({
      'M': dict({
        'attributes': dict({
        }),
      }),
      'N': dict({
        'attributes': dict({
        }),
      }),
      'O': dict({
        'attributes': dict({
        }),
      }),
      'P': dict({
        'attributes': dict({
        }),
      }),
      'X': dict({
        'attributes': dict({
        }),
      }),
      'Y': dict({
        'attributes': dict({
        }),
      }),
    }),
    'type': 'graph',
    'version': 1,
  })
# ---
# name: test_hyperedge_chain
  dict({
    'edges': list([
      dict({
        'attributes': dict({
        }),
        'directed': True,
        'source': list([
          'A',
          'B',
          'C',
        ]),
        'target': list([
          'D',
          'E',
        ]),
        'type': 'hyperedge',
      }),
    ]),
    'format': 'gmlang.graph',
    'nodes': dict({
      'A': dict({
        'attributes': dict({
        }),
      }),
      'B': dict({
        'attributes': dict({
        }),
      }),
      'C': dict({
        'attributes': dict({
        }),
      }),
      'D': dict({
        'attributes': dict({
        }),
      }),
      'E': dict({
        'attributes': dict({
        }),
      }),
    }),
    'type': 'graph',
    'version': 1,
  })
# ---
# name: test_hyperedge_connections
  dict({
    'edges': list([
      dict({
        'attributes': dict({
        }),
        'directed': False,
        'source': list([
          'A',
          'B',
          'C',
        ]),
        'target': list([
        ]),
        'type': 'hyperedge',
      }),
      dict({
        'attributes': dict({
        }),
        'directed': True,
        'source': list([
          'A',
          'B',
          'C',
        ]),
        'target': list([
          'D',
          'E',
        ]),
        'type': 'hyperedge',
      }),
    ]),
    'format': 'gmlang.graph',
    'nodes': dict({
      'A': dict({
        'attributes': dict({
        }),
      }),
      'B': dict({
        'attributes': dict({
        }),
      }),
      'C': dict({
        'attributes': dict({
        }),
      }),
      'D': dict({
        'attributes': dict({
        }),
      }),
      'E': dict({
        'attributes': dict({
        }),
      }),
    }),
    'type': 'graph',
    'version': 1,
  })
# ---
# name: test_infix_connections
  dict({
    'edges': list([
      dict({
        'attributes': dict({
          'tag': 'colleague',
        }),
        'directed': True,
        'source': 'E',
        'target': 'G',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
          'tag': 'colleague',
        }),
        'directed': True,
        'source': 'E',
        'target': 'H',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
          'tag': 'colleague',
        }),
        'directed': True,
        'source': 'F',
        'target': 'G',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
          'tag': 'colleague',
        }),
        'directed': True,
        'source': 'F',
        'target': 'H',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
          'tag': 'friend',
        }),
        'directed': False,
        'source': 'C',
        'target': 'D',
        'type': 'edge',
      }),
      dict({
        'attributes': dict({
          'tag': 'sister',
        }),
        'directed': True,
        'source': 'A',
        'target': 'B',
        'type': 'edge',
      }),
    ]),
    'format': 'gmlang.graph',
    'nodes': dict({
      'A': dict({
        'attributes': dict({
        }),
      }),
      'B': dict({
        'attributes': dict({
        }),
      }),
      'C': dict({
        'attributes': dict({
        }),
      }),
      'D': dict({
        'attributes': dict({
        }),
      }),
      'E': dict({
        'attributes': dict({
        }),
      }),
      'F': dict({
        'attributes': dict({
        }),
      }),
      'G': dict({
        'attributes': dict({
        }),
      }),
      'H': dict({
        'attributes': dict({
        }),
      }),
    }),
    'type': 'graph',
    'version': 1,
  })
# ---
